# serde

./: .gitignore  LICENSE  README.md  all_actions_for_actors_who_starred_repo.py  duck_serde.py  fake_stars_stats.py  polars_serde.py  pyproject.toml  starring_actor_repo_summary.py  starring_actor_summary.py  stg_all_actions_for_actors_who_starred_repo.py  stg_spammy_repos.py  stg_starring_actor_overlap.py  stg_starring_actor_repo_clusters.py
rusty_serde/: Cargo.toml
rusty_serde/src/: main.rs
