[package]
name = "rusty_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.24"
parquet = "37.0.0"
arrow = "37.0.0"
arrow-schema = { version = "37.0.0", features = ["serde"] }
arrow-tools = "0.10.0"
